--- a/workshop/content/03_ocpv_customization.adoc
+++ b/workshop/content/03_ocpv_customization.adoc
@@ -56,7 +56,6 @@ Even though this template has a disk already available, we want to import a diff
 
 +
 image::images/Create_VM_URL/01_Create_VM_Boot_Source.png[]
-+
 Press *Next*
 
 . Review the *Overview* tab with the default configuration from the template
@@ -124,11 +123,45 @@ image::images/Create_VM_URL/05_Wizard_Scripts.png[]
 [NOTE]
 If you want to learn more about how to customize and deploy Windows virtual machines, choose the optional Windows Virtual Machines module from the workshop navigation menu.
 
-. Since this is a Fedora VM, press *Edit* in the *Cloud-init* section to specify the password `ocpVirtIsGre@t` for the user `fedora`. Click *Apply* when done.
+. Since this is a Fedora VM, press *Edit* in the *Cloud-init* section and the click on *Script* radio button to specify a cloud-init script that will be run during the VM startup. Below is a sample cloud-init script that you would use to  configure ;
+* A password for the user `fedora` to `ocpVirtIsGre@t`
+* Install a package
+* Create and run a Database service
 +
-Notice that we can also specify network configuration information here by checking the appropriate box. This is useful when, for example, you're connecting the VM directly to a VLAN network and want to configure a static IP address.
+[source,yaml]
+----
+userData: |
+  #cloud-config
+  user: fedora
+  password: ocpVirtIsGre@t
+  chpasswd: { expire: False }
+  write_files:
+    - path: /etc/systemd/system/patient-portal-database.service
+      content: |
+        [Unit]
+        Description=Patient Portal Database Container
+        Wants=network.target
+        After=network.target
+
+        [Service]
+        Restart=always
+        ExecStart=/usr/bin/podman run --rm --name %n -p 5432:5432 quay.io/skupper/patient-portal-database
+        ExecStop=/usr/bin/podman stop -t 10 %n
+        ExecStopPost=/usr/bin/podman rm -f %n
+
+        [Install]
+        WantedBy=multi-user.target
+  packages:
+    - podman
+  runcmd:
+    - systemctl daemon-reload
+    - systemctl enable --now patient-portal-database.service
+----
+Please replace the content of the window with the above script.
 +
-image::images/Create_VM_URL/05_Wizard_Scripts_Password.png[]
+image::images/Create_VM_URL/05_Wizard_Scripts_Custom.png[]
++
+Click *Apply* when done.
 
 . Press *Create VirtualMachine* ensuring the option *Start this VirtualMachine after creation* is checked.
 +
@@ -139,6 +172,24 @@ If you forget to check the _Start this VirtualMachine after creation_ box, after
 
 . Once the Virtual Machine is running feel free to connect to it using the *Console* tab. Remember that the user is `fedora` and the password is now the one that you specified before (for example `ocpVirtIsGre@t`).
 
+== Verify VM Customization
+. The VM would take aproximately 5 minutes to complete the customization script. Once the VM is ready, click the *Console* tab to access the VM's console and then click *Guest login credentials* to see the password we specified in the cloud-init script for the `fedora` user. This is only visible when the VM has been customized, which we have already done.
++
+image::images/Create_VM_URL/13_Fedora_Console.png[]
+
+. Log in to the VM using the `fedora` user and the indicated password.
++
+[IMPORTANT]
+You can click on `Paste` to paste the password after copying it.
++
+[IMPORTANT]
+If the `Paste` functionality is not working, take into consideration that the console input is using US keymap. One small trick is to write in the login the password to ensure you are writing the proper characters (specifically that the `-` character is correct).
+
+. After you log in, run the `cat /etc/systemd/system/patient-portal-database.service` command to display the content of the systemd file which was created using the customization script.
++
+. You may verify if the service is running using `systemctl status patient-portal-database.service`
++
+image::images/Create_VM_URL/13_Custom_Script_Service_status.png[]
 ////
 == Virtual Machine Templates
 
