--- a/workshop/content/12_migrate_vms.adoc
+++ b/workshop/content/12_migrate_vms.adoc
@@ -54,7 +54,7 @@ The application consists of the following four virtual machines:
 // WKTBD: Replace with actual link for each student
 The application is accessible from the following link: http://webapp.vc.opentlc.com/
 
-You will migrate three of the four virtual machines - you will not need to migrate the HAproxy (load balancer) VM because OpenShift handles network traffic and load balancing natively for VMs connected to the SDN using a `Service`.
+You will migrate three of the four virtual machines using cold migration - you will not need to migrate the HAproxy (load balancer) VM because OpenShift handles network traffic and load balancing natively for VMs connected to the SDN using a `Service`.
 
 === Review the VMware environment
 
@@ -172,6 +172,9 @@ image::images/MTV/101_List_VMWARE_Mapping_Storage.png[]
 === Create a Migration Plan
 
 Now that you have the virtualization provider and the two mappings (network & storage) you can create a Migration Plan - this plan selects which VMs to migrate from VMware vSphere to Red Hat OpenShift Virtualization and how to execute the migration (cold/warm, network mapping, storage mapping, pre-/post-hooks, etc.).
+
+[NOTE]
+Depending on order of you doing the modules, you might be missing required `vmexamples` namespace here. If you haven't done yet, do chapter *OpenShift Virtualization Basics* -> *Create a new Project*)
 
 . Navigate in the left menu to *Migration* -> *Plans for virtualization* and press *Create plan*
 +
