--- a/workshop/content/01_welcome.adoc
+++ b/workshop/content/01_welcome.adoc
@@ -9,7 +9,7 @@ This workshop has two segments which we encourage all attendees to complete:
 * _Migrating Virtual Machines_: In this section, you will use the Migration Toolkit for Virtualization (MTV) to migrate a few VMs from an existing VMware vSphere environment to OpenShift Virtualization.
 * _OpenShift Virtualization Basics_: This lab focuses on how to create and use virtual machines with OpenShift Virtualization. It covers the most common tasks you would be expected to perform as a VM user/administrator.
 
-Additionally, there are a number of optional modules which target activites that you may be interested in depending on your specific role, responsibilities, and/or what you're curious about.
+Additionally, there are a number of optional modules which target activities that you may be interested in depending on your specific role, responsibilities, and/or what you're curious about.
 
 *Virtual machine administrators*
 
@@ -25,7 +25,7 @@ Additionally, there are a number of optional modules which target activites that
 
 *Virtual machine users*
 
-* _Exposing apps using a Route_: This lab walks through the process of using a Service and Route to provide internal-only connectivity between application components, then expose only the applicaton's front end to the world.
+* _Exposing apps using a Route_: This lab walks through the process of using a Service and Route to provide internal-only connectivity between application components, then expose only the application's front end to the world.
 * _Exposing apps using MetalLB_: Providing connectivity to VM-hosted applications, without putting the VM on an external L2 network, is a powerful way to manage connectivity to the application. This lab walks through the process of exposing just the database to the world, without connecting the VM to the external network.
 
 == What is OpenShift Virtualization?
@@ -37,7 +37,7 @@ Additionally, there are a number of optional modules which target activites that
 * OpenShift Virtualization leverages the RHEL KVM hypervisor and allows the VM to be managed by Kubernetes and KubeVirt. An OpenShift Virtualization VM uses Kubernetes scheduling, network, and storage infrastructure.
 * OpenShift Virtualization includes entitlements for **unlimited virtual RHEL guests**. Guest licensing for other supported operating systems will need to be purchased separately.
 * OpenShift Virtualization is SVVP certified with Microsoft for Windows guest support per the same rules that apply to Red Hat’s other KVM virtualization offerings.
-* OpenShift Virtualization is only supported on bare metal physical servers, typically on-premises or dedicated hosting. Support for other topologies (OpenShift on virtualized infrastructure like RHV or vSphere, OpenShift on public cloud) is not supported at this time.
+* OpenShift Virtualization is mainly supported on bare metal physical servers, typically on-premises or dedicated hosting. Support for other topologies (OpenShift on virtualized infrastructure like RHV or vSphere) is not supported at this time, but we are in the process to add support for Managed OpenShift Cloud services. Support for AWS / ROSA has already been announced: https://www.redhat.com/en/blog/managing-virtual-machines-and-containers-as-code-with-openshift-virtualization-on-red-hat-openshift-service-on-aws
 
 OpenShift Virtualization allows OpenShift to deploy, manage, and connect virtual machines to an OpenShift cluster. This includes the ability to connect to and manage those VMs using Kubernetes-native methods and take advantage of OpenShift features like Pipelines, GitOps, Service Mesh, and more.
 
@@ -64,3 +64,7 @@ The innovation in Kubernetes, serverless, service mesh, Kubernetes Operators, an
 == Next steps
 
 If you would like to learn more about OpenShift Virtualization, please visit the https://www.redhat.com/en/technologies/cloud-computing/openshift/virtualization[landing page], review the https://docs.openshift.com/container-platform/latest/virt/about_virt/about-virt.html[documentation], or view some of our demo videos on https://www.youtube.com/playlist?list=PLaR6Rq6Z4IqeQeTosfoFzTyE_QmWZW6n_[YouTube].
+
+== Requirements for the lab environment
+
+Participant needs to have own computer with browser and internet access. Chromium based browser is recommended, some copy paste functions don't work in Firefox for time being. Remote access console uses US keyboard layout, so good to know where special characters reside in it for other country layouts. Or use copy paste with recommended browser.
